turmites.lessons.turmites.turmitecreator.TurmiteCreator.scala.error
Turmite:13: error: type mismatch;
 found   : (((Int, Int, Int), (Int, Int, Int)), ((Int, Int, Int), (Int, Int, Int)))
 required: Array[Array[Array[Int]]]
var rule:Array[Array[Array[Int]]] = (((1, RIGHT, 0),(1, RIGHT, 1)), ((0, NOTURN, 0), (0, NOTURN, 1))) // Change this
                                    ^